--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "node server.js",
     "preview": "vite preview",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "deploy": "npm run build && cp -r dist/* ../deploy/"
@@ -16,8 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "lucide-react": "^0.263.1",
-    "framer-motion": "^10.12.4",
-    "express": "^4.18.2"
+    "framer-motion": "^10.12.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
