--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,26 @@
 services:
   - type: web
     name: whipsly-react
-    env: node
+    env: static
     buildCommand: npm install && npm run build
-    startCommand: npm start
+    staticPublishPath: ./dist
+    headers:
+      - path: /*
+        name: X-Frame-Options
+        value: DENY
+      - path: /*
+        name: X-XSS-Protection
+        value: 1; mode=block
+      - path: /*
+        name: X-Content-Type-Options
+        value: nosniff
+      - path: /assets/*.js
+        name: Content-Type
+        value: application/javascript; charset=utf-8
+      - path: /assets/*.css
+        name: Content-Type
+        value: text/css; charset=utf-8
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
